--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>AutoMaster App</title>
+    <link rel="icon" type="image/png" href="img/Logo.png"/>
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
